##
## Copyright (c) 2022 Gabriele Baldoni
##
## This program and the accompanying materials are made available under the
## terms of the Eclipse Public License 2.0 which is available at
## http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
## which is available at https://www.apache.org/licenses/LICENSE-2.0.
##
## SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
##
## Contributors:
##   Gabriele Baldoni, <gabriele@gabrielebaldoni.com>
##

[package]
name = "hls_lfcd_lds_driver"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/gabrik/hls_lfcd_lds_rs"
homepage = "https://github.com/gabrik/hls_lfcd_lds_rs"
authors = ["gabrik <gabriele.baldoni@gmail.com>"]
license = " EPL-2.0 OR Apache-2.0"
categories = ["drivers"]
description = "Rust driver for ROBOTIS HLDS HLS-LFCD-LDS (LDS-01)"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.17.0", features = ["full"] }
clap = { version = "3.1", features = ["derive"] }
tokio-serial = "5.4.1"
futures = "0.3.21"
